# habla-con-tu-pdf

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/src/: config.py  main.py
backend/src/db/: chroma_db.py
backend/src/models/: schemas.py
backend/src/routes/: rag_routes.py
backend/src/services/: rag_service.py
backend/src/utils/: __init__.py  file_manager.py  index_manager.py  pdf_loader.py  pdf_processor.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/components/: AppHeader.tsx  ChatInterface.tsx  DocumentManagement.tsx  ThemeToggle.tsx  UploadSection.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/hooks/: usePDFChat.ts
frontend/src/lib/: api.ts  chat-storage.ts  types.ts
frontend/src/lib/utils/: formatting.ts  statusUtils.tsx
